--- a/search-engine-optimization-seo.html
+++ b/search-engine-optimization-seo.html
@@ -13,8 +13,10 @@ permalink: /search-engine-optimization-seo/
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
 				<h1>Search Engine Optimization</h1>
-				<h3>It takes more than just having a website to bring you more leads. Now that you have an online presence, you're also competing with other companies who also want the attention of your potential clients. Fivestar's SEO services increase your ranking in search engines organically which results in increased leads. We audit your website and research your competitors and clients to make a detailed SEO strategy for superior results.</h3>
-				<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
+				<h3>It takes more than just having a website to bring you more leads. Now that you have an online presence, you're also competing
+					with other companies who also want the attention of your potential clients. Fivestar's SEO services increase your ranking
+					in search engines organically which results in increased leads. We audit your website and research your competitors
+					and clients to make a detailed SEO strategy for superior results.</h3>
 			</div>
 		</div>
 		<div class="row eqHeight icons Why">
@@ -24,52 +26,53 @@ permalink: /search-engine-optimization-seo/
 				<p class="serviceTextBox">All of our SEO plans are pay-per-month for results you can see. We do not lock our clients into long-term contracts.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/audit.png">
-					<h3>SEO Audit</h3>
-					<p class="serviceTextBox">We assess the current situation of your website (if any). Our SWAT analysis determines how you can best benefit from SEO.</p>
+				<img src="{{ site.baseurl }}/images/audit.png">
+				<h3>SEO Audit</h3>
+				<p class="serviceTextBox">We assess the current situation of your website (if any). Our SWAT analysis determines how you can best benefit from
+					SEO.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
 				<img src="{{ site.baseurl }}/images/keyword-research.png">
 				<h3>Keyword Research</h3>
-				<p class="serviceTextBox">The optimal keyphrases that searchers use to find products and services which relate to your company and its industry sector.</p>
-		</div>
-		<div class="col-xs-12 col-md-3">
-			<img src="{{ site.baseurl }}/images/google.png">
-			<h3>Google Optimization</h3>
-			<p class="serviceTextBox">SEO results optimized for Google, the most popular web search engine putting your company's best foot forward.</p>
-	</div>
+				<p class="serviceTextBox">The optimal keyphrases that searchers use to find products and services which relate to your company and its industry
+					sector.</p>
 			</div>
-			<div class="row eqHeight icons Why secondRow">
-		
-					<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/link-building.png">
-					<h3>Link Building</h3>
-					<p class="serviceTextBox">Increase traffic to your website and Google ranking by building external links in news media and prominent industry blogs.</p>
+			<div class="col-xs-12 col-md-3">
+				<img src="{{ site.baseurl }}/images/google.png">
+				<h3>Google Optimization</h3>
+				<p class="serviceTextBox">SEO results optimized for Google, the most popular web search engine putting your company's best foot forward.</p>
+			</div>
+		</div>
+		<div class="row eqHeight icons Why secondRow">
+
+			<div class="col-xs-12 col-md-3">
+				<img src="{{ site.baseurl }}/images/link-building.png">
+				<h3>Link Building</h3>
+				<p class="serviceTextBox">Increase traffic to your website and Google ranking by building external links in news media and prominent industry blogs.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
 				<img src="{{ site.baseurl }}/images/onsite-updates.png">
 				<h3>Onsite Updates</h3>
 				<p class="serviceTextBox">All website files individually analyzed continuously to utilize best SEO industry practices to rank your pages higher.</p>
-		</div>
-
+			</div>
 			<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/content-writing.png">
-					<h3>Content Writing</h3>
-					<p class="serviceTextBox">Initial posts relating to your company products and services with industry-specific articles to jumpstart your blog.</p>
-			</div>	
-
+				<img src="{{ site.baseurl }}/images/content-writing.png">
+				<h3>Content Writing</h3>
+				<p class="serviceTextBox">Initial posts relating to your company products and services with industry-specific articles to jumpstart your blog.</p>
+			</div>
 			<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/review.png">
-					<h3>Reviews</h3>
-					<p class="serviceTextBox">Monthly reviews of SEO ranking to monitor and adjust your SEO campaign for contiued performance.</p>
+				<img src="{{ site.baseurl }}/images/review.png">
+				<h3>Reviews</h3>
+				<p class="serviceTextBox">Monthly reviews of SEO ranking to monitor and adjust your SEO campaign for contiued performance.</p>
 			</div>
 		</div>
 		<div class="row">
-				<div class="col-xs-12 serviceHeading">
-					<h1>SEO Process</h1>
-					<h3>Our thorough, research-focused SEO process ensures that your campaign gets the best results as quickly as possible. Unlike some of our competitors, we use only ethical, white hat techniques for long-term results. Before we proceed, we conduct a free audit to give you a clear report of what you can expect to gain from our services.</h3>
-					<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
-				</div>
+			<div class="col-xs-12 serviceHeading">
+				<h1>SEO Process</h1>
+				<h3>Our thorough, research-focused SEO process ensures that your campaign gets the best results as quickly as possible. Unlike
+					some of our competitors, we use only ethical, white hat techniques for long-term results. Before we proceed, we conduct
+					a free audit to give you a clear report of what you can expect to gain from our services.</h3>
+			</div>
 		</div>
 		<div class="row eqHeight">
 			<div class="col-xs-12 col-md-5 featuresPadding">
@@ -80,41 +83,46 @@ permalink: /search-engine-optimization-seo/
 			<div class="col-xs-12 col-md-7 featuresPadding">
 				<div class="serviceDetail">
 					<h2>1. SEO Audit</h2>
-					<h3>The first step of the SEO process is understand the starting position of your site within search engines. We analyze the current traffic your site is getting along with relevant site statistics (keywords, bounce rates, etc.). Understanding the traffic level and its source of referrals helps in making other online marketing decisions.</h3>
+					<h3>The first step of the SEO process is understand the starting position of your site within search engines. We analyze
+						the current traffic your site is getting along with relevant site statistics (keywords, bounce rates, etc.). Understanding
+						the traffic level and its source of referrals helps in making other online marketing decisions.</h3>
 				</div>
 			</div>
 		</div>
-
 		<div class="row eqHeight reversible">
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
 					<img class="shadow" src="{{ site.baseurl }}/images/long-tail-seo.jpg">
 				</div>
 			</div>
-
 			<div class="col-xs-12 col-md-6 featuresPadding">
-						<div class="serviceDetail">
-								<h2>2. Keyword and Market Research</h2>
-								<h3>Next, we identify a set of keyword phrases that will be used for optimization. This important step requires balancing two important factors: high usage by searchers and relatively low competition within search engines. This ensures that your site is built to be found with searchers in mind.</h3>
-								<h3>Using the target keyword phrases, we do a competitive analysis of your site against its biggest competitors. We use a variety of SEO metrics including indexed content, Alexa rating, inbound links, domain age, social media following among others.</h3>
-								<h3>From this, we are able to gauge your site's starting position relative to your competitors, exploit their weaknesses and adjust the SEO plan accordingly.</h3>
-							</div>
-					</div>
-
-		</div>
-		<div class="row eqHeight">
-				<div class="col-xs-12 col-md-5 featuresPadding">
-						<div class="featuresImg">
-							<img class="shadow" src="{{ site.baseurl }}/images/goal-setting.jpg">
-						</div>
-					</div>
-			<div class="col-xs-12 col-md-7 featuresPadding">
 				<div class="serviceDetail">
-						<h2>3. Goal Setting</h2>
-						<h3>Once we have a snapshot of your site's starting position, we set goals for the SEO plan. These goals are measurable	and relate to the specific business objectives of the site. In the ongoing process of Conversion Rate Optimization, progress towards the goals are analyzed and if required, adjusted accordingly.</h3>
+					<h2>2. Keyword and Market Research</h2>
+					<h3>Next, we identify a set of keyword phrases that will be used for optimization. This important step requires balancing
+						two important factors: high usage by searchers and relatively low competition within search engines. This ensures that
+						your site is built to be found with searchers in mind.</h3>
+					<h3>Using the target keyword phrases, we do a competitive analysis of your site against its biggest competitors. We use
+						a variety of SEO metrics including indexed content, Alexa rating, inbound links, domain age, social media following
+						among others.</h3>
+					<h3>From this, we are able to gauge your site's starting position relative to your competitors, exploit their weaknesses
+						and adjust the SEO plan accordingly.</h3>
 				</div>
 			</div>
-
+		</div>
+		<div class="row eqHeight">
+			<div class="col-xs-12 col-md-5 featuresPadding">
+				<div class="featuresImg">
+					<img class="shadow" src="{{ site.baseurl }}/images/goal-setting.jpg">
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-7 featuresPadding">
+				<div class="serviceDetail">
+					<h2>3. Goal Setting</h2>
+					<h3>Once we have a snapshot of your site's starting position, we set goals for the SEO plan. These goals are measurable
+						and relate to the specific business objectives of the site. In the ongoing process of Conversion Rate Optimization,
+						progress towards the goals are analyzed and if required, adjusted accordingly.</h3>
+				</div>
+			</div>
 		</div>
 		<div class="row eqHeight reversible">
 			<div class="col-xs-12 col-md-4 featuresPadding">
@@ -122,28 +130,31 @@ permalink: /search-engine-optimization-seo/
 					<img class="shadow" src="{{ site.baseurl }}/images/on-page-optimization.png">
 				</div>
 			</div>
-
 			<div class="col-xs-12 col-md-8 featuresPadding">
 				<div class="serviceDetail">
-						<h2>4. Page Optimization</h2>
-						<h3>This process involves ensuring all elements that make up the content of every page within your site are related to the content itself. Elements include keywords, title tag, description tag, headings, internal linking, website structure and other factors. Images are also compressed and redundant code is removed for increased page load speed.</h3>
-						<h3>As the content on each page is different throughout your site, this is done individually for each page for optimal results.</h3>
-					</div>
+					<h2>4. Page Optimization</h2>
+					<h3>This process involves ensuring all elements that make up the content of every page within your site are related to the
+						content itself. Elements include keywords, title tag, description tag, headings, internal linking, website structure
+						and other factors. Images are also compressed and redundant code is removed for increased page load speed.</h3>
+					<h3>As the content on each page is different throughout your site, this is done individually for each page for optimal results.</h3>
+				</div>
 			</div>
 		</div>
 		<div class="row eqHeight">
-				<div class="col-xs-12 col-md-5 featuresPadding">
-					<div class="featuresImg">
-						<img class="shadow" src="{{ site.baseurl }}/images/link-building.jpg">
-					</div>
+			<div class="col-xs-12 col-md-5 featuresPadding">
+				<div class="featuresImg">
+					<img class="shadow" src="{{ site.baseurl }}/images/link-building.jpg">
 				</div>
-				<div class="col-xs-12 col-md-7 featuresPadding">
-						<div class="serviceDetail">
-								<h2>5. Link Building</h2>
-								<h3>The amount of inbound links to your site is one of the most important factors for your website's search ranking. We produce high quality inbound links to your site using social media, local directories, press releases and a variety of other means.</h3>
-								<h3>Quality link building takes time and is an important factor of long-term SEO success.</h3>
-							</div>
-					</div>
+			</div>
+			<div class="col-xs-12 col-md-7 featuresPadding">
+				<div class="serviceDetail">
+					<h2>5. Link Building</h2>
+					<h3>The amount of inbound links to your site is one of the most important factors for your website's search ranking. We
+						produce high quality inbound links to your site using social media, local directories, press releases and a variety
+						of other means.</h3>
+					<h3>Quality link building takes time and is an important factor of long-term SEO success.</h3>
+				</div>
+			</div>
 		</div>
 		<div class="row eqHeight reversible">
 			<div class="col-xs-12 col-md-5 featuresPadding">
@@ -153,23 +164,27 @@ permalink: /search-engine-optimization-seo/
 			</div>
 			<div class="col-xs-12 col-md-7 featuresPadding">
 				<div class="serviceDetail">
-						<h2>6. Conversion Rate Optimization</h2>
-						<h3>The same auditing process done in the initial phase of the campaign is done again at regular intervals after optimization. All key metrics including rankings, traffic levels, social media signals and others are compared to pre-optimization levels giving measurable results to the SEO campaign.</h3>
+					<h2>6. Conversion Rate Optimization</h2>
+					<h3>The same auditing process done in the initial phase of the campaign is done again at regular intervals after optimization.
+						All key metrics including rankings, traffic levels, social media signals and others are compared to pre-optimization
+						levels giving measurable results to the SEO campaign.</h3>
 				</div>
 			</div>
-
-		</div>		
+		</div>
 		<div class="row Why">
 			<div class="col-xs-12 serviceHeading">
 				<h1>SEO Pricing</h1>
-				<h3>Call us today at {% include telnumberlink.html %} to learn more about our SEO packages. You can also use our <a href="{{ site.baseurl }}/contact/"><span class="bold">Contact Form</span></a> or send us an email at {% include emaillink.html %} at your convenience.</h3>
+				<h3>Call us today at {% include telnumberlink.html %} to learn more about our SEO packages. You can also use our
+					<a href="{{ site.baseurl }}/contact/">
+						<span class="bold">Contact Form</span>
+					</a> or send us an email at {% include emaillink.html %} at your convenience.</h3>
 			</div>
 		</div>
 		<div class="row eqHeight Why featuresContainer">
 			<div class="col-xs-12 col-md-3 features">
 				<ul class="shadow">
 					<h2 class="bold">Basic</h2>
-					<h2 class="bold">$700</h2>
+					<h2 class="bold">$400</h2>
 					<li>ABC</li>
 					<li>ABC</li>
 					<li>ABC</li>
@@ -181,7 +196,7 @@ permalink: /search-engine-optimization-seo/
 			<div class="col-xs-12 col-md-3 features">
 				<ul class="shadow">
 					<h2 class="bold">Aggressive</h2>
-					<h2 class="bold">$700</h2>
+					<h2 class="bold">$800</h2>
 					<li>ABC</li>
 					<li>ABC</li>
 					<li>ABC</li>
@@ -196,7 +211,7 @@ permalink: /search-engine-optimization-seo/
 			<div class="col-xs-12 col-md-3 features">
 				<ul class="shadow">
 					<h2 class="bold">Market Leader</h2>
-					<h2 class="bold">$700</h2>
+					<h2 class="bold">$1,200</h2>
 					<li>ABC</li>
 					<li>ABC</li>
 					<li>ABC</li>
@@ -214,7 +229,7 @@ permalink: /search-engine-optimization-seo/
 			<div class="col-xs-12 col-md-3 features">
 				<ul class="shadow">
 					<h2 class="bold">Enterprise</h2>
-					<h2 class="bold">$CALL</h2>
+					<h2 class="bold">$2,000+</h2>
 					<li>ABC</li>
 					<li>ABC</li>
 					<li>ABC</li>
@@ -236,4 +251,5 @@ permalink: /search-engine-optimization-seo/
 	</div>
 	{% include footermapless.html %}
 </body>
+
 </html>
