--- a/website-design.html
+++ b/website-design.html
@@ -155,6 +155,7 @@ permalink: /website-design/
 				<ul>
 					<h2 class="bold">Template</h2>
 					<h2 class="bold">$700</h2>
+					<li>3 Page Website</li>
 					<li>WordPress Template</li>
 					<li>Customization of Theme</li>
 					<li>1-hour Brainstorming Session</li>
@@ -166,6 +167,7 @@ permalink: /website-design/
 					<li>Photosourcing</li>
 					<li>2 Rounds of Revisions</li>
 					<li>Contact Form</li>
+					<li>Mailing List</li>
 					<li>XML Sitemap</li>
 					<li>*Additional Pages $70 each</li>
 				</ul>
@@ -174,6 +176,7 @@ permalink: /website-design/
 				<ul>
 					<h2 class="bold">Template+</h2>
 					<h2 class="bold">$1,700</h2>
+					<li>5 Page Website</li>
 					<li>WordPress Template</li>
 					<li>Customization of Theme</li>
 					<li>1-hour Brainstorming Session</li>
@@ -183,8 +186,10 @@ permalink: /website-design/
 					<li>Social Media Integration</li>
 					<li>Google Maps</li>
 					<li>Photosourcing</li>
-					<li>2 Rounds of Revisions</li>
+					<li>3 Rounds of Revisions</li>
 					<li>Contact Form</li>
+					<li>Mailing List</li>
+					<li>404 Redirect</li>
 					<li>XML Sitemap</li>
 					<li>*Additional Pages $100 each</li>
 				</ul>
@@ -193,17 +198,23 @@ permalink: /website-design/
 				<ul>
 					<h2 class="bold">Custom</h2>
 					<h2 class="bold">$2,700</h2>
+					<li>5 Page Website</li>
+					<li>2 Page Custom Mock-up</li>
 					<li>Custom CMS</li>
-					<li>Customization of Theme</li>
-					<li>1-hour Brainstorming Session</li>
+					<li>Hand-coded from Scratch</li>
+					<li>Static Design</li>
+					<li>2-hour Brainstorming Session</li>
 					<li>Mobile Responsive</li>
 					<li>Google Analytics</li>
 					<li>Copyrighting</li>
 					<li>Social Media Integration</li>
 					<li>Google Maps</li>
+					<li>6 Custom Icons</li>
 					<li>Photosourcing</li>
-					<li>2 Rounds of Revisions</li>
+					<li>3 Rounds of Revisions</li>
 					<li>Contact Form</li>
+					<li>Mailing List</li>
+					<li>404 Redirect</li>
 					<li>XML Sitemap</li>
 					<li>*Additional Pages $150 each</li>
 				</ul>
@@ -212,17 +223,26 @@ permalink: /website-design/
 				<ul>
 					<h2 class="bold">Enterprise</h2>
 					<h2 class="bold">$5,000+</h2>
+					<li>5 Page Website</li>
+					<li>5 Page Custom Mock-up</li>
+					<li>Will Travel to Your Location</li>
 					<li>Custom CMS</li>
-					<li>Customization of Theme</li>
-					<li>1-hour Brainstorming Session</li>
+					<li>Hand-coded from Scratch</li>
+					<li>Static Design</li>
+					<li>Competitor Research</li>
+					<li>A/B Testing</li>
+					<li>2-hour Brainstorming Session</li>
 					<li>Mobile Responsive</li>
 					<li>Google Analytics</li>
 					<li>Copyrighting</li>
 					<li>Social Media Integration</li>
-					<li>Google Maps</li>
+					<li>Custom Google Maps</li>
+					<li>10 Custom Icons</li>
 					<li>Photosourcing</li>
-					<li>2 Rounds of Revisions</li>
+					<li>3 Rounds of Revisions</li>
 					<li>Contact Form</li>
+					<li>Mailing List</li>
+					<li>404 Redirect</li>
 					<li>XML Sitemap</li>
 					<li>*Additional Pages $200 each</li>
 				</ul>
