--- a/contact.html
+++ b/contact.html
@@ -42,10 +42,12 @@ permalink: /contact/
 					<div class="row eqHeight spacer addressText">
 						<div class="col-xs-12 col-md-6 eqHeight">
 							<p class="bold serviceTextBox officeLocationHtAdjust">Toronto Office</p>
-							<p>4711 Yonge Street, 10th Floor</p>
-							<p>Toronto, ON</p>
-							<p>M2N 6K8, Canada</p>
-							<p>{% include telnumbertextlong.html %}</p>
+						<p>
+							<span>4711 Yonge Street, 10th Floor</span>
+							<span>Toronto, ON</span>
+							<span>M2N 6K8, Canada</span>
+							<span>{% include telnumbertextlong.html %}</span>
+						</p>
 						</div>
 						<div class="col-xs-12 col-md-6">
 							<div class="footerImg">
@@ -56,10 +58,12 @@ permalink: /contact/
 					<div class="row eqHeight bigSpacer addressText">
 						<div class="col-xs-12 col-md-6 eqHeight">
 							<p class="bold serviceTextBox officeLocationHtAdjust">Brampton Office</p>
-							<p>2 County Court Blvd., Suite 400</p>
-							<p>Brampton, ON</p>
-							<p>L6W 3W8, Canada</p>
-							<p>{% include telnumbertextlong.html %}</p>
+						<p>
+							<span>2 County Court Blvd., Suite 400</span>
+							<span>Brampton, ON</span>
+							<span>L6W 3W8, Canada</span>
+							<span>{% include telnumbertextlong.html %}</span>
+						</p>
 						</div>
 						<div class="col-xs-12 col-md-6">
 							<div class="footerImg">
